// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select isOpen={true} 1`] = `
<div
  class="select isOpen"
>
  <div
    class="selectInput"
  >
    <div
      class="root"
    >
      <span>
        <div
          class="inputWrapper"
        >
          <input
            class="input"
            readonly=""
            value=""
          />
        </div>
      </span>
    </div>
  </div>
  <div
    class="options isOpen firstOptionHighlighted root isFloating"
  >
    <div
      class="bubble"
      data-bubble-container="true"
    >
      <ul
        class="ul"
        style="max-height:300px"
      >
        <div
          class="root"
        >
          <div
            class="ScrollbarsCustom"
            style="position:relative;height:230px"
          >
            <div
              class="ScrollbarsCustom-Wrapper"
              style="position:absolute;overflow:hidden"
            >
              <div
                class="ScrollbarsCustom-Scroller"
                style="position:absolute;top:0;left:0;bottom:0;right:0;-webkit-overflow-scrolling:touch;overflow-y:hidden;overflow-x:hidden"
              >
                <div
                  class="ScrollbarsCustom-Content"
                  style="padding:0.05px"
                >
                  <li
                    aria-hidden="true"
                    class="option highlightedOption"
                    role="presentation"
                  >
                    <span
                      class="label"
                    >
                      Frankreich
                    </span>
                  </li>
                  <li
                    aria-hidden="true"
                    class="option"
                    role="presentation"
                  >
                    <span
                      class="label"
                    >
                      Spanien
                    </span>
                  </li>
                  <li
                    aria-hidden="true"
                    class="option"
                    role="presentation"
                  >
                    <span
                      class="label"
                    >
                      Kroatien
                    </span>
                  </li>
                  <li
                    aria-hidden="true"
                    class="option"
                    role="presentation"
                  >
                    <span
                      class="label"
                    >
                      Vereinigten Staaten
                    </span>
                  </li>
                  <li
                    aria-hidden="true"
                    class="option"
                    role="presentation"
                  >
                    <span
                      class="label"
                    >
                      Österreich
                    </span>
                  </li>
                </div>
              </div>
            </div>
            <div
              class="ScrollbarsCustom-Track ScrollbarsCustom-TrackY"
              style="display:none"
            >
              <div
                class="ScrollbarsCustom-Thumb ScrollbarsCustom-ThumbY"
                style="touch-action:none"
              />
            </div>
            <div
              class="ScrollbarsCustom-Track ScrollbarsCustom-TrackX"
              style="display:none"
            >
              <div
                class="ScrollbarsCustom-Thumb ScrollbarsCustom-ThumbX"
                style="touch-action:none"
              />
            </div>
          </div>
        </div>
      </ul>
    </div>
    <span
      class="arrow"
      data-bubble-arrow="true"
    />
  </div>
</div>
`;

exports[`Select isOpeningUpward={true} 1`] = `
<div
  class="select openUpward"
>
  <div
    class="selectInput"
  >
    <div
      class="root"
    >
      <span>
        <div
          class="inputWrapper"
        >
          <input
            class="input"
            readonly=""
            value=""
          />
        </div>
      </span>
    </div>
  </div>
  <div
    class="options openUpward root openUpward isFloating isHidden"
  >
    <div
      class="bubble"
      data-bubble-container="true"
    >
      <ul
        class="ul"
        style="max-height:300px"
      >
        <div
          class="root"
        >
          <div
            class="ScrollbarsCustom"
            style="position:relative;height:230px"
          >
            <div
              class="ScrollbarsCustom-Wrapper"
              style="position:absolute;overflow:hidden"
            >
              <div
                class="ScrollbarsCustom-Scroller"
                style="position:absolute;top:0;left:0;bottom:0;right:0;-webkit-overflow-scrolling:touch;overflow-y:hidden;overflow-x:hidden"
              >
                <div
                  class="ScrollbarsCustom-Content"
                  style="padding:0.05px"
                >
                  <li
                    aria-hidden="true"
                    class="option highlightedOption"
                    role="presentation"
                  >
                    <span
                      class="label"
                    >
                      Österreich
                    </span>
                  </li>
                  <li
                    aria-hidden="true"
                    class="option"
                    role="presentation"
                  >
                    <span
                      class="label"
                    >
                      Vereinigten Staaten
                    </span>
                  </li>
                  <li
                    aria-hidden="true"
                    class="option"
                    role="presentation"
                  >
                    <span
                      class="label"
                    >
                      Kroatien
                    </span>
                  </li>
                  <li
                    aria-hidden="true"
                    class="option"
                    role="presentation"
                  >
                    <span
                      class="label"
                    >
                      Spanien
                    </span>
                  </li>
                  <li
                    aria-hidden="true"
                    class="option"
                    role="presentation"
                  >
                    <span
                      class="label"
                    >
                      Frankreich
                    </span>
                  </li>
                </div>
              </div>
            </div>
            <div
              class="ScrollbarsCustom-Track ScrollbarsCustom-TrackY"
              style="display:none"
            >
              <div
                class="ScrollbarsCustom-Thumb ScrollbarsCustom-ThumbY"
                style="touch-action:none"
              />
            </div>
            <div
              class="ScrollbarsCustom-Track ScrollbarsCustom-TrackX"
              style="display:none"
            >
              <div
                class="ScrollbarsCustom-Thumb ScrollbarsCustom-ThumbX"
                style="touch-action:none"
              />
            </div>
          </div>
        </div>
      </ul>
    </div>
    <span
      class="arrow"
      data-bubble-arrow="true"
    />
  </div>
</div>
`;

exports[`Select renders correctly 1`] = `
<div
  class="select"
>
  <div
    class="selectInput"
  >
    <div
      class="root"
    >
      <span>
        <div
          class="inputWrapper"
        >
          <input
            class="input"
            readonly=""
            value=""
          />
        </div>
      </span>
    </div>
  </div>
  <div
    class="options firstOptionHighlighted root isFloating isHidden"
  >
    <div
      class="bubble"
      data-bubble-container="true"
    >
      <ul
        class="ul"
        style="max-height:300px"
      >
        <div
          class="root"
        >
          <div
            class="ScrollbarsCustom"
            style="position:relative;height:230px"
          >
            <div
              class="ScrollbarsCustom-Wrapper"
              style="position:absolute;overflow:hidden"
            >
              <div
                class="ScrollbarsCustom-Scroller"
                style="position:absolute;top:0;left:0;bottom:0;right:0;-webkit-overflow-scrolling:touch;overflow-y:hidden;overflow-x:hidden"
              >
                <div
                  class="ScrollbarsCustom-Content"
                  style="padding:0.05px"
                >
                  <li
                    aria-hidden="true"
                    class="option highlightedOption"
                    role="presentation"
                  >
                    <span
                      class="label"
                    >
                      Frankreich
                    </span>
                  </li>
                  <li
                    aria-hidden="true"
                    class="option"
                    role="presentation"
                  >
                    <span
                      class="label"
                    >
                      Spanien
                    </span>
                  </li>
                  <li
                    aria-hidden="true"
                    class="option"
                    role="presentation"
                  >
                    <span
                      class="label"
                    >
                      Kroatien
                    </span>
                  </li>
                  <li
                    aria-hidden="true"
                    class="option"
                    role="presentation"
                  >
                    <span
                      class="label"
                    >
                      Vereinigten Staaten
                    </span>
                  </li>
                  <li
                    aria-hidden="true"
                    class="option"
                    role="presentation"
                  >
                    <span
                      class="label"
                    >
                      Österreich
                    </span>
                  </li>
                </div>
              </div>
            </div>
            <div
              class="ScrollbarsCustom-Track ScrollbarsCustom-TrackY"
              style="display:none"
            >
              <div
                class="ScrollbarsCustom-Thumb ScrollbarsCustom-ThumbY"
                style="touch-action:none"
              />
            </div>
            <div
              class="ScrollbarsCustom-Track ScrollbarsCustom-TrackX"
              style="display:none"
            >
              <div
                class="ScrollbarsCustom-Thumb ScrollbarsCustom-ThumbX"
                style="touch-action:none"
              />
            </div>
          </div>
        </div>
      </ul>
    </div>
    <span
      class="arrow"
      data-bubble-arrow="true"
    />
  </div>
</div>
`;

exports[`Select renders with an error 1`] = `
<div
  class="select"
>
  <div
    class="selectInput"
  >
    <div
      class="root errored"
    >
      <span>
        <div
          class="inputWrapper"
        >
          <input
            class="input errored"
            readonly=""
            value=""
          />
        </div>
      </span>
    </div>
  </div>
  <div
    class="options firstOptionHighlighted root isFloating isHidden"
  >
    <div
      class="bubble"
      data-bubble-container="true"
    >
      <ul
        class="ul"
        style="max-height:300px"
      >
        <div
          class="root"
        >
          <div
            class="ScrollbarsCustom"
            style="position:relative;height:230px"
          >
            <div
              class="ScrollbarsCustom-Wrapper"
              style="position:absolute;overflow:hidden"
            >
              <div
                class="ScrollbarsCustom-Scroller"
                style="position:absolute;top:0;left:0;bottom:0;right:0;-webkit-overflow-scrolling:touch;overflow-y:hidden;overflow-x:hidden"
              >
                <div
                  class="ScrollbarsCustom-Content"
                  style="padding:0.05px"
                >
                  <li
                    aria-hidden="true"
                    class="option highlightedOption"
                    role="presentation"
                  >
                    <span
                      class="label"
                    >
                      Frankreich
                    </span>
                  </li>
                  <li
                    aria-hidden="true"
                    class="option"
                    role="presentation"
                  >
                    <span
                      class="label"
                    >
                      Spanien
                    </span>
                  </li>
                  <li
                    aria-hidden="true"
                    class="option"
                    role="presentation"
                  >
                    <span
                      class="label"
                    >
                      Kroatien
                    </span>
                  </li>
                  <li
                    aria-hidden="true"
                    class="option"
                    role="presentation"
                  >
                    <span
                      class="label"
                    >
                      Vereinigten Staaten
                    </span>
                  </li>
                  <li
                    aria-hidden="true"
                    class="option"
                    role="presentation"
                  >
                    <span
                      class="label"
                    >
                      Österreich
                    </span>
                  </li>
                </div>
              </div>
            </div>
            <div
              class="ScrollbarsCustom-Track ScrollbarsCustom-TrackY"
              style="display:none"
            >
              <div
                class="ScrollbarsCustom-Thumb ScrollbarsCustom-ThumbY"
                style="touch-action:none"
              />
            </div>
            <div
              class="ScrollbarsCustom-Track ScrollbarsCustom-TrackX"
              style="display:none"
            >
              <div
                class="ScrollbarsCustom-Thumb ScrollbarsCustom-ThumbX"
                style="touch-action:none"
              />
            </div>
          </div>
        </div>
      </ul>
    </div>
    <span
      class="arrow"
      data-bubble-arrow="true"
    />
  </div>
</div>
`;

exports[`Select renders with disabled options 1`] = `
<div
  class="select"
>
  <div
    class="selectInput"
  >
    <div
      class="root"
    >
      <span>
        <div
          class="inputWrapper"
        >
          <input
            class="input"
            readonly=""
            value=""
          />
        </div>
      </span>
    </div>
  </div>
  <div
    class="options firstOptionHighlighted root isFloating isHidden"
  >
    <div
      class="bubble"
      data-bubble-container="true"
    >
      <ul
        class="ul"
        style="max-height:300px"
      >
        <div
          class="root"
        >
          <div
            class="ScrollbarsCustom"
            style="position:relative;height:184px"
          >
            <div
              class="ScrollbarsCustom-Wrapper"
              style="position:absolute;overflow:hidden"
            >
              <div
                class="ScrollbarsCustom-Scroller"
                style="position:absolute;top:0;left:0;bottom:0;right:0;-webkit-overflow-scrolling:touch;overflow-y:hidden;overflow-x:hidden"
              >
                <div
                  class="ScrollbarsCustom-Content"
                  style="padding:0.05px"
                >
                  <li
                    aria-hidden="true"
                    class="option highlightedOption"
                    role="presentation"
                  >
                    <span
                      class="label"
                    >
                      England
                    </span>
                  </li>
                  <li
                    aria-hidden="true"
                    class="option disabledOption"
                    role="presentation"
                  >
                    <span
                      class="label"
                    >
                      Spain
                    </span>
                  </li>
                  <li
                    aria-hidden="true"
                    class="option disabledOption"
                    role="presentation"
                  >
                    <span
                      class="label"
                    >
                      Thailand
                    </span>
                  </li>
                  <li
                    aria-hidden="true"
                    class="option"
                    role="presentation"
                  >
                    <span
                      class="label"
                    >
                      USA
                    </span>
                  </li>
                </div>
              </div>
            </div>
            <div
              class="ScrollbarsCustom-Track ScrollbarsCustom-TrackY"
              style="display:none"
            >
              <div
                class="ScrollbarsCustom-Thumb ScrollbarsCustom-ThumbY"
                style="touch-action:none"
              />
            </div>
            <div
              class="ScrollbarsCustom-Track ScrollbarsCustom-TrackX"
              style="display:none"
            >
              <div
                class="ScrollbarsCustom-Thumb ScrollbarsCustom-ThumbX"
                style="touch-action:none"
              />
            </div>
          </div>
        </div>
      </ul>
    </div>
    <span
      class="arrow"
      data-bubble-arrow="true"
    />
  </div>
</div>
`;

exports[`Select renders with placeholder 1`] = `
<div
  class="select"
>
  <div
    class="selectInput"
  >
    <div
      class="root"
    >
      <span>
        <div
          class="inputWrapper"
        >
          <input
            class="input"
            placeholder="Select your country …"
            readonly=""
            value=""
          />
        </div>
      </span>
    </div>
  </div>
  <div
    class="options firstOptionHighlighted root isFloating isHidden"
  >
    <div
      class="bubble"
      data-bubble-container="true"
    >
      <ul
        class="ul"
        style="max-height:300px"
      >
        <div
          class="root"
        >
          <div
            class="ScrollbarsCustom"
            style="position:relative;height:230px"
          >
            <div
              class="ScrollbarsCustom-Wrapper"
              style="position:absolute;overflow:hidden"
            >
              <div
                class="ScrollbarsCustom-Scroller"
                style="position:absolute;top:0;left:0;bottom:0;right:0;-webkit-overflow-scrolling:touch;overflow-y:hidden;overflow-x:hidden"
              >
                <div
                  class="ScrollbarsCustom-Content"
                  style="padding:0.05px"
                >
                  <li
                    aria-hidden="true"
                    class="option highlightedOption"
                    role="presentation"
                  >
                    <span
                      class="label"
                    >
                      Frankreich
                    </span>
                  </li>
                  <li
                    aria-hidden="true"
                    class="option"
                    role="presentation"
                  >
                    <span
                      class="label"
                    >
                      Spanien
                    </span>
                  </li>
                  <li
                    aria-hidden="true"
                    class="option"
                    role="presentation"
                  >
                    <span
                      class="label"
                    >
                      Kroatien
                    </span>
                  </li>
                  <li
                    aria-hidden="true"
                    class="option"
                    role="presentation"
                  >
                    <span
                      class="label"
                    >
                      Vereinigten Staaten
                    </span>
                  </li>
                  <li
                    aria-hidden="true"
                    class="option"
                    role="presentation"
                  >
                    <span
                      class="label"
                    >
                      Österreich
                    </span>
                  </li>
                </div>
              </div>
            </div>
            <div
              class="ScrollbarsCustom-Track ScrollbarsCustom-TrackY"
              style="display:none"
            >
              <div
                class="ScrollbarsCustom-Thumb ScrollbarsCustom-ThumbY"
                style="touch-action:none"
              />
            </div>
            <div
              class="ScrollbarsCustom-Track ScrollbarsCustom-TrackX"
              style="display:none"
            >
              <div
                class="ScrollbarsCustom-Thumb ScrollbarsCustom-ThumbX"
                style="touch-action:none"
              />
            </div>
          </div>
        </div>
      </ul>
    </div>
    <span
      class="arrow"
      data-bubble-arrow="true"
    />
  </div>
</div>
`;

exports[`Select uses render prop - optionRenderer 1`] = `
<div
  class="select"
>
  <div
    class="selectInput"
  >
    <div
      class="root"
    >
      <span>
        <div
          class="inputWrapper"
        >
          <input
            class="input"
            readonly=""
            value=""
          />
        </div>
      </span>
    </div>
  </div>
  <div
    class="options firstOptionHighlighted root isFloating isHidden"
  >
    <div
      class="bubble"
      data-bubble-container="true"
    >
      <ul
        class="ul"
        style="max-height:300px"
      >
        <div
          class="root"
        >
          <div
            class="ScrollbarsCustom"
            style="position:relative;height:230px"
          >
            <div
              class="ScrollbarsCustom-Wrapper"
              style="position:absolute;overflow:hidden"
            >
              <div
                class="ScrollbarsCustom-Scroller"
                style="position:absolute;top:0;left:0;bottom:0;right:0;-webkit-overflow-scrolling:touch;overflow-y:hidden;overflow-x:hidden"
              >
                <div
                  class="ScrollbarsCustom-Content"
                  style="padding:0.05px"
                >
                  <li
                    aria-hidden="true"
                    class="option highlightedOption"
                    role="presentation"
                  >
                    <div>
                      <span>
                        German: Frankreich
                      </span>
                      <span>
                        English: France
                      </span>
                    </div>
                  </li>
                  <li
                    aria-hidden="true"
                    class="option"
                    role="presentation"
                  >
                    <div>
                      <span>
                        German: Spanien
                      </span>
                      <span>
                        English: Spain
                      </span>
                    </div>
                  </li>
                  <li
                    aria-hidden="true"
                    class="option"
                    role="presentation"
                  >
                    <div>
                      <span>
                        German: Kroatien
                      </span>
                      <span>
                        English: Croatia
                      </span>
                    </div>
                  </li>
                  <li
                    aria-hidden="true"
                    class="option"
                    role="presentation"
                  >
                    <div>
                      <span>
                        German: Vereinigten Staaten
                      </span>
                      <span>
                        English: United States
                      </span>
                    </div>
                  </li>
                  <li
                    aria-hidden="true"
                    class="option"
                    role="presentation"
                  >
                    <div>
                      <span>
                        German: Österreich
                      </span>
                      <span>
                        English: Austria
                      </span>
                    </div>
                  </li>
                </div>
              </div>
            </div>
            <div
              class="ScrollbarsCustom-Track ScrollbarsCustom-TrackY"
              style="display:none"
            >
              <div
                class="ScrollbarsCustom-Thumb ScrollbarsCustom-ThumbY"
                style="touch-action:none"
              />
            </div>
            <div
              class="ScrollbarsCustom-Track ScrollbarsCustom-TrackX"
              style="display:none"
            >
              <div
                class="ScrollbarsCustom-Thumb ScrollbarsCustom-ThumbX"
                style="touch-action:none"
              />
            </div>
          </div>
        </div>
      </ul>
    </div>
    <span
      class="arrow"
      data-bubble-arrow="true"
    />
  </div>
</div>
`;

exports[`Select uses render prop - valueRenderer 1`] = `
<div
  class="select"
>
  <div
    class="selectInput"
  >
    <div
      class="root"
    >
      <span>
        <div
          class="inputWrapper"
        >
          <div
            class="customValueWrapper"
          >
            <input
              class="input"
              readonly=""
              value=""
            />
            <div
              class="customValueBlock"
            />
          </div>
        </div>
      </span>
    </div>
  </div>
  <div
    class="options firstOptionHighlighted root isFloating isHidden"
  >
    <div
      class="bubble"
      data-bubble-container="true"
    >
      <ul
        class="ul"
        style="max-height:300px"
      >
        <div
          class="root"
        >
          <div
            class="ScrollbarsCustom"
            style="position:relative;height:138px"
          >
            <div
              class="ScrollbarsCustom-Wrapper"
              style="position:absolute;overflow:hidden"
            >
              <div
                class="ScrollbarsCustom-Scroller"
                style="position:absolute;top:0;left:0;bottom:0;right:0;-webkit-overflow-scrolling:touch;overflow-y:hidden;overflow-x:hidden"
              >
                <div
                  class="ScrollbarsCustom-Content"
                  style="padding:0.05px"
                >
                  <li
                    aria-hidden="true"
                    class="option highlightedOption"
                    role="presentation"
                  >
                    <div>
                      <div>
                        Main wallet
                      </div>
                      <div>
                        100,100 ADA
                      </div>
                    </div>
                  </li>
                  <li
                    aria-hidden="true"
                    class="option"
                    role="presentation"
                  >
                    <div>
                      <div>
                        Spending money
                      </div>
                      <div>
                        10,100.2 ADA
                      </div>
                    </div>
                  </li>
                  <li
                    aria-hidden="true"
                    class="option"
                    role="presentation"
                  >
                    <div>
                      <div>
                        Savings
                      </div>
                      <div>
                        500,1000 ADA
                      </div>
                    </div>
                  </li>
                </div>
              </div>
            </div>
            <div
              class="ScrollbarsCustom-Track ScrollbarsCustom-TrackY"
              style="display:none"
            >
              <div
                class="ScrollbarsCustom-Thumb ScrollbarsCustom-ThumbY"
                style="touch-action:none"
              />
            </div>
            <div
              class="ScrollbarsCustom-Track ScrollbarsCustom-TrackX"
              style="display:none"
            >
              <div
                class="ScrollbarsCustom-Thumb ScrollbarsCustom-ThumbX"
                style="touch-action:none"
              />
            </div>
          </div>
        </div>
      </ul>
    </div>
    <span
      class="arrow"
      data-bubble-arrow="true"
    />
  </div>
</div>
`;
